[gd_scene load_steps=6 format=3 uid="uid://dfxb38jon7u3g"]

[ext_resource type="PackedScene" uid="uid://bkmr88t83s54d" path="res://scenes/player.tscn" id="1_4d1ss"]
[ext_resource type="Script" path="res://scripts/main.gd" id="1_trh61"]
[ext_resource type="PackedScene" uid="uid://c23augsm1ve0u" path="res://scenes/ground.tscn" id="2_ovs3g"]
[ext_resource type="PackedScene" uid="uid://cdjvwn5j6nw6g" path="res://scenes/pipe.tscn" id="2_ybiec"]
[ext_resource type="PackedScene" uid="uid://ckoy5t3k72xpc" path="res://scenes/hud.tscn" id="4_dsm4d"]

[node name="DerpyBird" type="Node"]
script = ExtResource("1_trh61")
pipe = ExtResource("2_ybiec")

[node name="Hud" parent="." instance=ExtResource("4_dsm4d")]

[node name="Background" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 1, 1, 1)

[node name="Player" parent="." instance=ExtResource("1_4d1ss")]
position = Vector2(239, 305)

[node name="Ground" parent="." instance=ExtResource("2_ovs3g")]
position = Vector2(320, 656)

[node name="ScoreTimer" type="Timer" parent="."]

[connection signal="restart_clicked" from="Hud" to="." method="_on_hud_restart_clicked"]
[connection signal="timeout" from="ScoreTimer" to="." method="_on_score_timer_timeout"]
